<resources>
    <string name="app_name">LearningSocialNetwork</string>
    <string name="drawer_open">Drawer Open</string>
    <string name="drawer_close">Drawer Close</string>
    <string name="title_activity_login">LoginActivity</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="facebook_logo">Facebook Logo</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="enter_password">Enter Password</string>
    <string name="need_a_new_account">Need a new account?</string>
    <string name="or_login_with">Or Login with</string>
    <string name="twitter_logo">Twitter Logo</string>
    <string name="google_logo">Google Logo</string>
    <string name="full_circle_logo">Full Circle Logo</string>
    <string name="username">Username</string>
    <string name="country">Country</string>
    <string name="full_name">Full Name</string>
    <string name="main_type_of_waste">Main Type of Waste</string>
    <string name="save_yo_deets">Save Yo Deets</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="create_account">Create Account</string>
    <string name="confirm">Confirm</string>
    <string name="fullcirclelogo">FullCircleLogo</string>
</resources>