<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorOffWhite"
    tools:context=".RegisterActivity">

    <ImageView
        android:id="@+id/login_icon"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="26dp"
        android:contentDescription="@string/full_circle_logo"
        app:srcCompat="@drawable/full_circle" />

    <EditText
        android:id="@+id/login_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_icon"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="46dp"
        android:background="@drawable/inputs"
        android:drawableStart="@drawable/email"
        android:ems="10"
        android:hint="@string/enter_your_email"
        android:inputType="textEmailAddress"
        android:padding="10dp"
        android:autofillHints="" />

    <EditText
        android:id="@+id/login_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_email"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="10dp"
        android:background="@drawable/inputs"
        android:drawableStart="@drawable/password"
        android:ems="10"
        android:hint="@string/enter_password"
        android:inputType="textPassword"
        android:padding="10dp"
        tools:visibility="visible"
        android:autofillHints="" />

    <Button
        android:id="@+id/login_create_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_password"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/button"
        android:padding="15dp"
        android:text="@string/create_account"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/register_account_link"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignWithParentIfMissing="true"
        android:layout_below="@+id/login_create_account"
        android:layout_alignParentStart="true"
        android:layout_centerInParent="true"
        android:layout_marginTop="18dp"
        android:gravity="center|center_horizontal|center_vertical"
        android:text="@string/need_a_new_account"
        android:textColor="#BC1AB4"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/or_login_with"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/register_account_link"
        android:layout_alignParentEnd="false"
        android:layout_alignParentBottom="false"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:gravity="center|center_horizontal|center_vertical"
        android:text="@string/or_login_with" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/or_login_with"
        android:layout_marginTop="15dp"
        android:orientation="horizontal">


        <ImageView
            android:id="@+id/facebook_signin_button"
            android:layout_width="100dp"
            android:layout_height="80dp"
            android:layout_margin="5dp"
            android:layout_marginStart="23dp"
            android:layout_marginTop="13dp"
            android:layout_weight="1"
            android:contentDescription="@string/facebook_logo"
            android:src="@drawable/better_facebook" />

        <ImageView
            android:id="@+id/twitter_signin_button"
            android:layout_width="96dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:contentDescription="@string/twitter_logo"
            android:src="@drawable/better_twitter_2" />

        <ImageView
            android:id="@+id/google_signin_button"
            android:layout_width="90dp"
            android:layout_height="75dp"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:layout_marginTop="15dp"
            android:contentDescription="@string/google_logo"
            android:src="@drawable/google" />

    </LinearLayout>


</RelativeLayout>