<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SetupActivity"
    android:background="@color/colorOffWhite">


    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/setup_profile_image"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="26dp"
        android:src="@drawable/profile">

    </de.hdodenhof.circleimageview.CircleImageView>

    <EditText
        android:id="@+id/setup_username_entry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/setup_profile_image"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:background="@drawable/inputs"
        android:drawableStart="@drawable/username"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/username"
        android:inputType="textMultiLine"
        android:padding="14sp"
        android:autofillHints="" />

    <EditText
        android:id="@+id/setup_fullname_entry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/setup_username_entry"
        android:layout_centerInParent="true"
        android:layout_marginTop="20dp"
        android:background="@drawable/inputs"
        android:drawableStart="@drawable/name"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/full_name"
        android:inputType="textMultiLine"
        android:padding="14sp"
        android:autofillHints="" />

    <EditText
        android:id="@+id/setup_country_entry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/setup_fullname_entry"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:background="@drawable/inputs"
        android:drawableStart="@drawable/country"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/country"
        android:inputType="textMultiLine"
        android:padding="14sp"
        android:autofillHints="" />

    <EditText
        android:id="@+id/setup_waste_entry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/setup_country_entry"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:background="@drawable/inputs"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/main_type_of_waste"
        android:inputType="textMultiLine"
        android:drawableStart="@drawable/recycling_symbol_scaled"
        android:padding="14dp"
        android:autofillHints="" />

    <Button
        android:id="@+id/setup_save_info_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/setup_waste_entry"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:layout_marginStart="90dp"
        android:layout_marginEnd="90dp"
        android:background="@drawable/button"
        android:padding="15dp"
        android:text="@string/save_yo_deets"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:textStyle="bold" />


</RelativeLayout>